<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF8F5"
    tools:context=".MainActivity"
    >


    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/frame"
        android:backgroundTint="#F9F0E3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginBottom="18dp"
                android:gravity="center"
                android:textSize="20sp"
                android:fontFamily="serif-monospace"
                android:textColor="#3F414E"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/silent"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/logo"
                />
            <TextView
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/moon"
                android:gravity="center"
                android:textSize="20sp"
                android:fontFamily="serif-monospace"
                android:textColor="#3F414E"
                />



        </LinearLayout>

        <ImageView
            android:layout_width="330dp"
            android:layout_height="240dp"
            android:src="@drawable/group" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="384dp"
        android:fontFamily="@font/playfair_italic"
        android:lineSpacingExtra="5dp"
        android:text="@string/we"
        android:textColor=" #3F414E"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="8sp"
        android:fontFamily="@font/fuzzybubbles"
        android:text="@string/thousand"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/sign_btn"
        android:layout_width="304dp"
        android:layout_height="63dp"
        android:layout_gravity="center"
        android:layout_marginBottom="112dp"
        android:background="@drawable/rectangle"
        android:fontFamily="@font/fuzzybubbles"
        android:text="@string/sign_up"
        android:textSize="14dp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_btn">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/fuzzybubbles"
            android:gravity="center"
            android:text="@string/account"
            app:layout_constraintEnd_toEndOf="@+id/sign_btn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/sign_btn"
            app:layout_constraintTop_toBottomOf="@+id/sign_btn"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textAlignment="textStart"
            app:background="@null"
            app:backgroundTint="@null"
            android:backgroundTint="#FAF8F5"
            android:textColor="@color/black"
            android:fontFamily="@font/fuzzybubbles"
            android:textSize="12sp"
            android:layout_marginTop="12dp"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>