<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF8F5"
    tools:context=".MainActivity"
    >


    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/gr6800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/back_to_main"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="22dp"
            android:background="@drawable/ic_back"
            android:backgroundTint="#7583CA"
            app:backgroundTint="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/playfair_reg"
            android:text="@string/create_your_account"
            android:textAlignment="center"
            android:textColor="#3F414E"
            android:textSize="28sp" />

        <Button
            android:layout_width="324dp"
            android:layout_height="63dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="180dp"
            android:background="@drawable/rectangle"
            android:backgroundTint="#7583CA"
            android:text="@string/continue_with_facebook"
            android:textColor="#F6F1FB"
            app:backgroundTint="@null" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:layout_width="324dp"
            android:layout_height="63dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle"
            android:backgroundTint="#E5E5E5"
            android:text="@string/continue_with_google"
            android:textColor="#3F414E"
            android:drawableLeft="@drawable/ic_mail"
            android:drawableTint="@color/black"
            app:backgroundTint="@null" />

        <TextView
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="#A1A4B2"
            android:textSize="14sp"
            />

        <EditText
            android:id="@+id/name_editText"
            android:layout_marginTop="20dp"
            android:layout_width="374dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:background="@drawable/rectangle"
            app:backgroundTint="@null"
            android:backgroundTint="#F2F3F7"
            android:hint="@string/name"
            android:inputType="text"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/email_et"
            android:layout_marginTop="10dp"
            android:layout_width="374dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:background="@drawable/rectangle"
            app:backgroundTint="@null"
            android:backgroundTint="#F2F3F7"
            android:hint="Email adress"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/password_et"
            android:layout_marginTop="10dp"
            android:layout_width="374dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:background="@drawable/rectangle"
            app:backgroundTint="@null"
            android:backgroundTint="#F2F3F7"
            android:hint="Password"
            android:inputType="textPassword"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/create_button"
            android:layout_width="324dp"
            android:layout_height="63dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle"
            android:backgroundTint="#8E97FD"
            android:text="@string/create_account"
            android:textColor="#F6F1FB"
            app:backgroundTint="@null" />

        <TextView
            android:id="@+id/fields_tv"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/fields"
            android:textColor="#3F414E"
            android:textAlignment="center"
            android:textSize="12sp"
            android:visibility="invisible"
             />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>