<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8E97FD"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:drawableRight="@drawable/logo"
            android:drawablePadding="5dp"
            android:fontFamily="@font/fuzzybubbles"
            android:gravity="center"
            android:text="@string/silent"
            android:textColor="#FFECCC"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="96dp"
            tools:layout_editor_absoluteY="118dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:fontFamily="@font/fuzzybubbles"
            android:gravity="center"
            android:text="@string/moon"
            android:textColor="#FFECCC"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="195dp"
            tools:layout_editor_absoluteY="119dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/name_textView"
        android:gravity="center"
        android:textSize="30sp"
        android:fontFamily="@font/fuzzybubbles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFECCC"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/fuzzybubbles"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/welcome"
        android:textColor="#FFECCC"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/explore_Tv"
        android:visibility="invisible"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/playfair_italic"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/explore"
        android:textColor="#EBEAEC"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginBottom="112dp"
        android:background="@drawable/ellipse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.704"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:src="@drawable/cloud" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/girl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/explore_Tv" />

    </FrameLayout>


    <Button
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/start_btn"
        android:textColor="#3F414E"
        android:text="@string/get_started"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>